assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');

* {
    margin: 0;
    padding: 0;
    font-family: 'Roboto', sans-serif;
    box-sizing: border-box;
}
body{
  width: 100%;
  margin: 0;
  padding: 0;
}
html {
  scroll-behavior: smooth;
  margin: 0;
  padding: 0;
}
h2{
    font-family: 'Ubuntu', sans-serif;
}
.none{
    display: none !important;
}



#nav{
    padding: 0;
    width: 100%;
    height: 18.52vh;
    background-color: white;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 10vw;
    position: fixed;
    top: 0;
    z-index: 100;
}
#mobileNav{
  display: none;
}
#logoNav{
    height: 17.31vh;
    width: auto;
}
#nav > p {
    font-size: 2rem;
    font-family: 'Ubuntu', sans-serif;
    text-decoration: none;
    color: black;
    margin: 0 1vw;
    cursor: pointer;
}
#nav > img {
  margin: 1vw;
}



#mainContent{
    display: flex;
    flex-direction: row;
    min-height: 100vh;
    width: 100%;
    justify-content: space-between;
}
.slider{
    width: 60vw;
    height: auto;
    display: flex;
    overflow-x: scroll;
}
.card{
    margin: 0 20px;
}
.imgSlider{
    width: auto;
    height: 300px;
    filter: drop-shadow(12px 8px 5px rgba(0, 0, 0, 0.25));
    border-radius: 15px;
}

#allSlider {
    padding-top: 20vh;
    display: flex;
    height: 100%;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}
#leftCol{
    width: 5.42vw;
    min-height: 100%;
    background-color: #FFDC00;
    border-left: solid 3.33vw black;
}
#rightCol{
    width: 5.42vw;
    min-height: 100%;
    background-color: #FFDC00;
    border-right: solid 3.33vw black;
}
.sliderTitle{
    position: relative;
    padding-bottom: 10px;
    margin-bottom: 20px;
    margin-top: 100px;
    text-align: center;
    font-size: 64px;
}
.sliderTitle::before{
    position: absolute;
    content: '';
    background: #fbdd00;
    clip-path: polygon(0 0, 100% 0, 80% 100%, 0% 100%);
    width: 100%;
    height: 100%;
    z-index: -1;
    left: -10%;
    top: -6%;
}


.slider::-webkit-scrollbar {
  width: 14px;
  height: 14px;
}
.slider::-webkit-scrollbar-button {
  width: 0px;
  height: 0px;
}
.slider::-webkit-scrollbar-thumb {
  background: #c4c4c4;
  border: 0px none #ffffff;
  border-radius: 8px;
}
.slider::-webkit-scrollbar-thumb:hover {
  background: #c4c4c4;
}
.slider::-webkit-scrollbar-thumb:active {
  background: #c4c4c4;
}
.slider::-webkit-scrollbar-track {
  background: transparent;
  border: 0px none #ffffff;
  border-radius: 50px;
}
.slider::-webkit-scrollbar-track:hover {
  background: transparent;
}
.slider::-webkit-scrollbar-track:active {
  background: #333333;
}
.slider::-webkit-scrollbar-corner {
  background: transparent;
}

.close{
  width: 0% !important;
}
.open{
  width: 90% !important;
  padding-left: 5vw;
}

#mobileNav{
  width: 100%;
  display: none;
  position: fixed;
  top: 0;
  z-index: 100;
}
#topMobileNav{
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
  position: fixed;
  z-index: 100;
  background-color: white;
  width: 100%;
  transition: all 0.5s ease 0s;
  overflow: hidden;
}
#menuMobile{
  height: 100vh;
  width: 0%;
  z-index: 100;
  background-color: white;
  transition: all 0.5s ease 0s;
  overflow: hidden;
}
.logoMobileNav{
  height: 178px;
  width: auto;
}
#firstRow{
  display: flex;
  justify-content: space-between;
  align-items: center;
}
@media screen and (max-width: 1024px) {
  #nav {
    display: none;
  }
  #mobileNav{
    display: flex;
    flex-direction: column;
  }
  #allSlider{
    padding-top: 10vh;
  }
  .sliderTitle{
    font-size: 53px;
  }
}

